--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.0",
     "styled-components": "^4.4.1",
     "typescript": "^3.7.4"
   },
